--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "react-datepicker": "^6.2.0",
+    "sweetalert2": "^11.10.5"
   }
 }
