--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-BD_CONNECTION_STRING=mongodb+srv://l:lba20@backend.b1i2k9h.mongodb.net/?retryWrites=true&w=majority
-#  BD_CONNECTION_STRING=mongodb://localhost:27017/config
-ACCESS_TOKEN_SECRET=mi_secreto_de_token_de_acceso
-
+# {BD_CONNECTION_STRING=mongodb+srv://l:lba20@backend.b1i2k9h.mongodb.net/?retryWrites=true&w=majority}
+ BD_CONNECTION_STRING=mongodb://localhost:27017/config
+ACCESS_TOKEN_SECRET=VALOR_GENERADO_AQUI
 REFRESH_TOKEN_SECRET=VALOR_GENERADO_AQUI
